--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import InfoSection from '../components/InfoSection.astro';
 <Layout title="Capitulo I">
   <main>
     <h1>Capitulo I:<span class="text-gradient"> Introducción a las comunicaciones electrónicas</span></h1>
-    <h4 class="flex justify-center">Por: Ednoweri Anselmi y Victor Diaz</h4>
+    <h4 class="flex justify-center">Por: Ednoweri Anselmi - 26.355.060 y Victor Diaz - 27.732.939</h4>
 
     <ChapterSection
       title="Introduccion"
